<resources>
    <string name="app_name">JILY</string>
    <string name="button_account">Create an account</string>
    <string name="button_back">Back Button</string>
    <string name="button_login">Log in</string>
    <string name="button_logout">Sign out</string>
    <string name="button_signup">Sign up</string>
    <string name="button_start">Start</string>
    <string name="button_text_login">Log in here.</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_restaurants">Restaurants</string>
    <string name="menu_settings">Settings</string>
    <string name="text_account">Already have an account?</string>
    <string name="text_field_required"><i>This field is required</i></string>
    <string name="text_password">Password</string>
    <string name="text_info">Have your food\ndelivered safe\nand sound.</string>
    <string name="text_login">Login</string>
    <string name="text_orders">No orders in progress at the moment</string>
    <string name="text_restaurants">No restaurants available at the moment</string>
    <string name="text_settings">Settings</string>
    <string name="text_signup">Sign Up</string>
    <string name="text_status">Status</string>
    <string name="text_title">Title</string>
    <string name="text_username">Username</string>
    <string name="text_user_type">User type</string>
    <string name="text_user_info">Overview</string>
    <string name="text_user_pubkey">Public key</string>
    <string name="text_user_access_token">Access token</string>
    <string name="text_user_id">User ID</string>
    <string name="text_welcome">Welcome to JILY.</string>
</resources>