<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".LoginActivity">

    <ImageButton
        android:id="@+id/button_back_login"
        android:layout_width="@dimen/width_button_back"
        android:layout_height="@dimen/height_button_back"
        android:background="@drawable/ic_back"
        android:contentDescription="@string/button_back"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.099" />

    <TextView
        android:id="@+id/text_login"
        android:layout_width="@dimen/width_max"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/text_login"
        android:textColor="@color/primary_dark"
        android:textSize="@dimen/text_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.143" />

    <EditText
        android:id="@+id/edit_text_email_login"
        android:layout_width="@dimen/width_max"
        android:layout_height="wrap_content"
        android:ems="20"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/text_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/primary"
        android:textColorHint="@color/primary"
        android:textSize="@dimen/text_small"
        app:backgroundTint="@color/primary_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_login"
        app:layout_constraintVertical_bias="0.041"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edit_text_password_login"
        android:layout_width="@dimen/width_max"
        android:layout_height="wrap_content"
        android:ems="20"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/text_password"
        android:inputType="textPassword"
        android:textColor="@color/primary"
        android:textColorHint="@color/primary"
        android:textSize="@dimen/text_small"
        app:backgroundTint="@color/primary_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_email_login"
        app:layout_constraintVertical_bias="0.046"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="@dimen/width_max"
        android:layout_height="@dimen/height_button_auth"
        android:background="@drawable/button_round"
        android:text="@string/button_login"
        android:textColor="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.859" />

</androidx.constraintlayout.widget.ConstraintLayout>